kube-hw/12-kuber-05-network02/manifest/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploymment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app-fr
  template:
    metadata:
      labels:
        app: my-app-fr
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
