kube-hw/12-kuber-05-network02/manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-app-service
spec:
  selector:
    app: my-app-back
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      # targetPort: 80
