kube-hw/12-kuber-05-network02/manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app-service
spec:
  selector:
    app: my-app-fr
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
